--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <html>
 <head>
+<script data-ad-client="ca-pub-3033933229949649" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>  
 <DownloadFoyer>
 Welcome
 </Downloadfoyer>
